[package]
name = "styleth"
version = "0.1.2"
authors = ["azor <azorvk@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.8.3"
libsecp256k1 = "0.3.5"
hex = "0.4.3"
sha3 = "0.9.1"
structopt = "0.3.21"
indicatif = "0.15.0"
rayon = "1.5.0"
num_cpus = "1.13.0"
regex = "1.5.3"
atomic-counter = "1.0.1"
