[package]
name = "styleth"
description = "Ethereum vanity address generator"
version = "0.1.4"
authors = ["azorng"]
edition = "2018"
repository = "https://github.com/azorng/styleth"
keywords = ["ethereum", "vanity", "address", "cryptocurrency", "eth"]
license = "MIT"

[dependencies]
rand = "0.8.3"
libsecp256k1 = "0.5.0"
hex = "0.4.3"
sha3 = "0.9.1"
structopt = "0.3.21"
indicatif = "0.15.0"
rayon = "1.5.0"
num_cpus = "1.13.0"
regex = "1.5.5"
atomic-counter = "1.0.1"
